crates/specforge-parser/tests/snapshots/snapshot_tests__snap_union_types.snap
---
source: crates/specforge-parser/tests/snapshot_tests.rs
expression: "parse_ok(source, \"test.spec\").entities"
---
[
  {
    "kind": {
      "raw": "type"
    },
    "id": {
      "raw": "FieldValue"
    },
    "title": null,
    "fields": {
      "entries": [
        {
          "key": "variants",
          "value": {
            "ReferenceList": [
              "StringValue",
              "ReferenceList",
              "Block"
            ]
          }
        }
      ]
    },
    "raw_body": null,
    "span": {
      "file": "test.spec",
      "start_line": 2,
      "start_col": 1,
      "end_line": 2,
      "end_col": 54
    }
  },
  {
    "kind": {
      "raw": "type"
    },
    "id": {
      "raw": "McpErrorCode"
    },
    "title": null,
    "fields": {
      "entries": [
        {
          "key": "variants",
          "value": {
            "ReferenceList": [
              "invalid_input",
              "compilation_failed",
              "entity_not_found"
            ]
          }
        }
      ]
    },
    "raw_body": null,
    "span": {
      "file": "test.spec",
      "start_line": 4,
      "start_col": 1,
      "end_line": 4,
      "end_col": 80
    }
  },
  {
    "kind": {
      "raw": "type"
    },
    "id": {
      "raw": "JsonRpcErrorCode"
    },
    "title": null,
    "fields": {
      "entries": [
        {
          "key": "variants",
          "value": {
            "ReferenceList": [
              "-32700",
              "-32600",
              "-32601"
            ]
          }
        }
      ]
    },
    "raw_body": null,
    "span": {
      "file": "test.spec",
      "start_line": 6,
      "start_col": 1,
      "end_line": 6,
      "end_col": 49
    }
  }
]
